// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonTemplate rendered match snapshot 1`] = `
Object {
  "altText": "xxx",
  "template": Object {
    "actions": Array [
      Object {
        "label": "foo",
        "type": "uri",
        "uri": "https://...",
      },
      Object {
        "label": "bar",
        "type": "uri",
        "uri": "https://...",
      },
    ],
    "defaultAction": Object {
      "label": "???",
      "type": "uri",
      "uri": "https://...",
    },
    "imageAspectRatio": "square",
    "imageBackgroundColor": "#aaaaaa",
    "imageSize": "contain",
    "text": "world",
    "thumbnailImageUrl": "https://...",
    "title": "HELLO",
    "type": "buttons",
  },
  "type": "template",
}
`;

exports[`CarouselTemplate rendered match snapshot 1`] = `
Object {
  "altText": "xxx",
  "template": Object {
    "columns": Array [
      Object {
        "actions": Array [
          Object {
            "label": "with fries",
            "type": "uri",
            "uri": "https://...",
          },
          Object {
            "label": "with salad",
            "type": "uri",
            "uri": "https://...",
          },
        ],
        "defaultAction": undefined,
        "imageBackgroundColor": undefined,
        "text": "Burger",
        "thumbnailImageUrl": undefined,
        "title": undefined,
      },
      Object {
        "actions": Array [
          Object {
            "label": "with soup",
            "type": "uri",
            "uri": "https://...",
          },
          Object {
            "label": "with salad",
            "type": "uri",
            "uri": "https://...",
          },
        ],
        "defaultAction": undefined,
        "imageBackgroundColor": "#bbbbbb",
        "text": "tamato sause",
        "thumbnailImageUrl": "https://...",
        "title": "Spaghetti",
      },
    ],
    "imageAspectRatio": "square",
    "imageSize": "contain",
    "type": "carousel",
  },
  "type": "template",
}
`;

exports[`ConfirmTemplate rendered match snapshot 1`] = `
Object {
  "altText": "xxx",
  "template": Object {
    "actions": Array [
      Object {
        "label": "Blue pill",
        "type": "uri",
        "uri": "https://matrix.io/login",
      },
      Object {
        "label": "Red pill",
        "type": "uri",
        "uri": "https://matrix.io/leave",
      },
    ],
    "text": "Take a pill",
    "type": "confirm",
  },
  "type": "template",
}
`;

exports[`ImageCarouselTemplate rendered match snapshot 1`] = `
Object {
  "altText": "xxx",
  "template": Object {
    "columns": Array [
      Object {
        "action": Object {
          "label": "foo",
          "type": "uri",
          "uri": "https://...",
        },
        "imageUrl": "https://...",
      },
      Object {
        "action": Object {
          "label": "bar",
          "type": "uri",
          "uri": "https://...",
        },
        "imageUrl": "https://...",
      },
    ],
    "type": "image_carousel",
  },
  "type": "template",
}
`;
